Code to merge  the USA names

--- a/src/merge_data.ipynb
+++ b/src/merge_data.ipynb
@@ -27,12 +27,12 @@
    "source": [
     "## Spain data\n",
     "### Most frequent names by year\n",
-    "I download the data of the [100 most frequent names from 2002 to 2019 in Spain](https://www.ine.es/dyngs/INEbase/es/operacion.htm?c=Estadistica_C&cid=1254736177009&menu=resultados&idp=1254734710990#!tabs-1254736195454), shares by the Instituto Nacional de Estadistica."
+    "I download the data of the [100 most frequent names from 2002 to 2019 in Spain](https://www.ine.es/dyngs/INEbase/es/operacion.htm?c=Estadistica_C&cid=1254736177009&menu=resultados&idp=1254734710990#!tabs-1254736195454), shared by the Instituto Nacional de Estadistica."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +82,17 @@
     "df.name = [re.sub(r'([A-Za-z0-9]+\\s?[A-Za-z0-9]+)\\s{2,100}', r'\\1', name) for name in df.name]\n",
     "df = df[~(df.name=='total')]\n",
     "\n",
-    "# Names in tokens\n",
-    "df['tokens'] = [word_tokenize(n) for n in df.name]"
+    "# # Names in tokens\n",
+    "# df['tokens'] = [word_tokenize(n) for n in df.name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the data to CSCV file\n",
+    "# Save the data to CSV file\n",
     "df.to_csv('../data/names/names_spain.csv')"
    ]
   },
@@ -100,26 +100,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Most frequent names by year"
+    "### Average age by name\n",
+    "I download the data with [all names with frequency equal or higher to 20 people](https://www.ine.es/dyngs/INEbase/es/operacion.htm?c=Estadistica_C&cid=1254736177009&menu=resultados&idp=1254734710990#!tabs-1254736195454), shared by the Instituto Nacional de Estadistica."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Open the file\n",
+    "my_dic = {'Hombres':\"M\",\n",
+    "          \"Mujeres\":\"F\"}\n",
+    "\n",
+    "aux = dict()\n",
+    "for i, j in my_dic.items():\n",
+    "    aux[i] = pd.read_excel(my_folder+'nombres_por_edad_media.xls', \n",
+    "                  sheet_name=i,\n",
+    "                  skiprows=6 ,\n",
+    "                  names=['orden', 'name', 'number', 'average_age']\n",
+    "                 )#.drop(columns=['orden'])\n",
+    "    aux[i]['sex'] = j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate male and female databases\n",
+    "df = pd.concat([aux['Hombres'], aux['Mujeres']]).reset_index(drop=True)\n",
+    "\n",
+    "# Names in lowercase\n",
+    "df.name = [str(n).lower() for n in df.name]\n",
+    "\n",
+    "# Wrangling data\n",
+    "df.loc[30398 , 'name'] = 'na'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the data to CSV file\n",
+    "df.to_csv('../data/names/names_spain_average_age.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## USA data"
+    "## USA data\n",
+    "### Most frequent names by year\n",
+    "Names in [the US with frequency equal or higher to 5 observations per year](https://www.ssa.gov/oact/babynames/limits.html), by Social Security Administration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +176,13 @@
     "    aux = pd.read_csv(my_folder + 'yob' + str(y) + '.txt', \n",
     "                     header=None).rename(columns={0:'name', 1:'sex', 2:\"number\"})\n",
     "    aux['year'] = y\n",
-    "    df = pd.concat([df, aux])\n",
+    "    df = pd.concat([df, aux]).reset_index(drop=True)\n",
     "df.name = [i.lower() for i in df.name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -214,35 +256,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31949</th>\n",
+       "      <th>1989396</th>\n",
        "      <td>zyheem</td>\n",
        "      <td>M</td>\n",
        "      <td>5</td>\n",
        "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31950</th>\n",
+       "      <th>1989397</th>\n",
        "      <td>zykel</td>\n",
        "      <td>M</td>\n",
        "      <td>5</td>\n",
        "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31951</th>\n",
+       "      <th>1989398</th>\n",
        "      <td>zyking</td>\n",
        "      <td>M</td>\n",
        "      <td>5</td>\n",
        "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31952</th>\n",
+       "      <th>1989399</th>\n",
        "      <td>zyn</td>\n",
        "      <td>M</td>\n",
        "      <td>5</td>\n",
        "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31953</th>\n",
+       "      <th>1989400</th>\n",
        "      <td>zyran</td>\n",
        "      <td>M</td>\n",
        "      <td>5</td>\n",
@@ -254,44 +296,31 @@
        "</div>"
       ],
       "text/plain": [
-       "            name sex  number  year\n",
-       "0           mary   F    7065  1880\n",
-       "1           anna   F    2604  1880\n",
-       "2           emma   F    2003  1880\n",
-       "3      elizabeth   F    1939  1880\n",
-       "4         minnie   F    1746  1880\n",
-       "...          ...  ..     ...   ...\n",
-       "31949     zyheem   M       5  2019\n",
-       "31950      zykel   M       5  2019\n",
-       "31951     zyking   M       5  2019\n",
-       "31952        zyn   M       5  2019\n",
-       "31953      zyran   M       5  2019\n",
+       "              name sex  number  year\n",
+       "0             mary   F    7065  1880\n",
+       "1             anna   F    2604  1880\n",
+       "2             emma   F    2003  1880\n",
+       "3        elizabeth   F    1939  1880\n",
+       "4           minnie   F    1746  1880\n",
+       "...            ...  ..     ...   ...\n",
+       "1989396     zyheem   M       5  2019\n",
+       "1989397      zykel   M       5  2019\n",
+       "1989398     zyking   M       5  2019\n",
+       "1989399        zyn   M       5  2019\n",
+       "1989400      zyran   M       5  2019\n",
        "\n",
        "[1989401 rows x 4 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "# Save the data to CSV file\n",
+    "df.to_csv('../data/names/names_usa.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
