Change the merge-clean notebook, and update eda with latest changes

--- a/src/merge_clean.ipynb
+++ b/src/merge_clean.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merging databases\n",
+    "# Merge and clean databases\n",
     "## Libraries"
    ]
   },
@@ -49,12 +49,17 @@
     "            try:\n",
     "                aux = pd.read_excel(my_folder+'nomnac'+str(y)[-2:]+j, \n",
     "                                    sheet_name=i,\n",
-    "                                    skiprows=3, \n",
-    "                                    names=['name_m', 'number_m', 'erase', 'name_f', 'number_f']\n",
+    "                                    skiprows=4, \n",
+    "                                    header=None\n",
     "                                   )\n",
+    "                try:\n",
+    "                    aux.columns = ['name_m', 'number_m', 'erase', 'name_f', 'number_f']\n",
+    "                except:\n",
+    "                    aux.columns = ['name_m', 'number_m', 'erase_1', 'name_f', 'number_f', 'erase_2']\n",
     "            except:\n",
     "                next\n",
     "    aux['year'] = y\n",
+    "    aux = aux[['name_m', 'number_m', 'name_f', 'number_f', 'year']]\n",
     "    df_sp = pd.concat([df_sp, aux])"
    ]
   },
@@ -65,22 +70,23 @@
    "outputs": [],
    "source": [
     "# Wrangling data\n",
-    "df_sp.drop(columns=[\"erase\"])\n",
+    "# df_sp.drop(columns=[\"erase\"])\n",
     "males = df_sp[['name_m', 'number_m', 'year']]\\\n",
     "    .rename(columns={'name_m':'name', 'number_m': 'number'})\n",
     "males['sex'] = \"M\"\n",
     "females = df_sp[['name_f', 'number_f', 'year']]\\\n",
     "    .rename(columns={'name_f':'name', 'number_f': 'number'})\n",
     "females['sex'] = \"F\"\n",
-    "df = pd.concat([males, females]).reset_index(drop=True)\n",
+    "df = pd.concat([females, males]).reset_index(drop=True)\n",
     "\n",
     "# Names in lowercase\n",
     "df.name = [str(n).lower() for n in df.name]\n",
     "\n",
     "# Clean names\n",
     "df.name = [re.sub(r'^\\s+([A-Za-z])', r'\\1', name) for name in df.name]\n",
-    "df.name = [re.sub(r'([A-Za-z0-9]+\\s?[A-Za-z0-9]+)\\s{2,100}', r'\\1', name) for name in df.name]\n",
-    "df = df[~(df.name=='total')]\n",
+    "df.name = [re.sub(r'([A-Za-z0-9]+\\s?[A-Za-z0-9]+)\\s*$', r'\\1', name) for name in df.name]\n",
+    "df = df[~((df.name=='total') | (df.name=='nan') | (df.name==' '))]\n",
+    "df['number'] = df['number'].astype(int)\n",
     "\n",
     "# # Names in tokens\n",
     "# df['tokens'] = [word_tokenize(n) for n in df.name]"
@@ -106,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +126,13 @@
     "                  sheet_name=i,\n",
     "                  skiprows=6 ,\n",
     "                  names=['orden', 'name', 'number', 'average_age']\n",
-    "                 )#.drop(columns=['orden'])\n",
+    "                 ).drop(columns=['orden'])\n",
     "    aux[i]['sex'] = j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,38 +157,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## USA data\n",
-    "### Most frequent names by year\n",
-    "Names in [the US with frequency equal or higher to 5 observations per year](https://www.ssa.gov/oact/babynames/limits.html), by Social Security Administration."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parameters\n",
-    "my_folder = \"../data/raw/USA/\"\n",
-    "# years = np.arange(2000, 2020)\n",
-    "years = np.arange(1880, 2020)\n",
-    "\n",
-    "# Open the file\n",
-    "df = pd.DataFrame()\n",
-    "for y in years:\n",
-    "    aux = pd.read_csv(my_folder + 'yob' + str(y) + '.txt', \n",
-    "                     header=None).rename(columns={0:'name', 1:'sex', 2:\"number\"})\n",
-    "    aux['year'] = y\n",
-    "    df = pd.concat([df, aux]).reset_index(drop=True)\n",
-    "df.name = [i.lower() for i in df.name]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -207,116 +183,105 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>sex</th>\n",
        "      <th>number</th>\n",
-       "      <th>year</th>\n",
+       "      <th>average_age</th>\n",
+       "      <th>sex</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>mary</td>\n",
-       "      <td>F</td>\n",
-       "      <td>7065</td>\n",
-       "      <td>1880</td>\n",
+       "      <td>antonio</td>\n",
+       "      <td>666584</td>\n",
+       "      <td>56.3</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>anna</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2604</td>\n",
-       "      <td>1880</td>\n",
+       "      <td>manuel</td>\n",
+       "      <td>581915</td>\n",
+       "      <td>55.2</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>emma</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>1880</td>\n",
+       "      <td>jose</td>\n",
+       "      <td>578937</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>elizabeth</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1939</td>\n",
-       "      <td>1880</td>\n",
+       "      <td>francisco</td>\n",
+       "      <td>488901</td>\n",
+       "      <td>57.8</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>minnie</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1746</td>\n",
-       "      <td>1880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1989396</th>\n",
-       "      <td>zyheem</td>\n",
+       "      <td>david</td>\n",
+       "      <td>366782</td>\n",
+       "      <td>31.2</td>\n",
        "      <td>M</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1989397</th>\n",
-       "      <td>zykel</td>\n",
-       "      <td>M</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1989398</th>\n",
-       "      <td>zyking</td>\n",
-       "      <td>M</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1989399</th>\n",
-       "      <td>zyn</td>\n",
-       "      <td>M</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1989400</th>\n",
-       "      <td>zyran</td>\n",
-       "      <td>M</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1989401 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              name sex  number  year\n",
-       "0             mary   F    7065  1880\n",
-       "1             anna   F    2604  1880\n",
-       "2             emma   F    2003  1880\n",
-       "3        elizabeth   F    1939  1880\n",
-       "4           minnie   F    1746  1880\n",
-       "...            ...  ..     ...   ...\n",
-       "1989396     zyheem   M       5  2019\n",
-       "1989397      zykel   M       5  2019\n",
-       "1989398     zyking   M       5  2019\n",
-       "1989399        zyn   M       5  2019\n",
-       "1989400      zyran   M       5  2019\n",
-       "\n",
-       "[1989401 rows x 4 columns]"
+       "        name  number  average_age sex\n",
+       "0    antonio  666584         56.3   M\n",
+       "1     manuel  581915         55.2   M\n",
+       "2       jose  578937         61.5   M\n",
+       "3  francisco  488901         57.8   M\n",
+       "4      david  366782         31.2   M"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## USA data\n",
+    "### Most frequent names by year\n",
+    "Names in [the US with frequency equal or higher to 5 observations per year](https://www.ssa.gov/oact/babynames/limits.html), by Social Security Administration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "my_folder = \"../data/raw/USA/\"\n",
+    "years = np.arange(1880, 2020)\n",
+    "\n",
+    "# Open the file\n",
+    "df = pd.DataFrame()\n",
+    "for y in years:\n",
+    "    aux = pd.read_csv(my_folder + 'yob' + str(y) + '.txt', \n",
+    "                     header=None).rename(columns={0:'name', 1:'sex', 2:\"number\"})\n",
+    "    aux['year'] = y\n",
+    "    df = pd.concat([df, aux]).reset_index(drop=True)\n",
+    "\n",
+    "# Names in lowercase\n",
+    "df.name = [i.lower() for i in df.name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Save the data to CSV file\n",
     "df.to_csv('../data/names/names_usa.csv')"
@@ -326,15 +291,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Canada data"
+    "## Canada data\n",
+    "### Most frequent names by year\n",
+    "In the case of Canada, I only found information from [British Columbia's Most Popular Baby Names](https://www2.gov.bc.ca/gov/content/life-events/statistics-reports/bc-s-most-popular-baby-names), shared by the \n",
+    "Government of British Columbia."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Parameters\n",
+    "my_folder = \"../data/raw/Canada/\"\n",
+    "my_dic = {'boys':\"M\",\n",
+    "          \"girls\":\"F\"}\n",
+    "\n",
+    "aux = dict()\n",
+    "for i, j in my_dic.items():\n",
+    "    aux[i] = pd.read_csv(my_folder + 'bc-popular-' + i + '-names.csv', encoding ='latin1')\n",
+    "#     print(my_folder + 'bc-popular-' + i + '-names.csv')\n",
+    "    aux[i] = pd.DataFrame(aux[i].set_index('Name').stack()).reset_index()\\\n",
+    "                    .rename(columns={'Name':'name', 'level_1':'year', 0:'number'})\n",
+    "    aux[i]['sex'] = j\n",
+    "    \n",
+    "# Concatenate male and female databases\n",
+    "df = pd.concat([aux['boys'], aux['girls']]).reset_index(drop=True)\n",
+    "\n",
+    "# Names in lowercase\n",
+    "df.name = [str(n).lower() for n in df.name]\n",
+    "\n",
+    "# Clean names\n",
+    "df = df[~(df.year=='Total')]\n",
+    "df.year = df.year.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the data to CSV file\n",
+    "df.to_csv('../data/names/names_canada.csv')"
+   ]
   }
  ],
  "metadata": {
