--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -28645,8 +28645,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scoring names using IPA\n",
-    "*Note: IPA means [International Phonetic Alphabet](https://en.wikipedia.org/wiki/International_Phonetic_Alphabet)*"
+    "## Scoring names using [IPA](https://en.wikipedia.org/wiki/International_Phonetic_Alphabet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The objective of this section is to construct a tool to measure how well a surname name combines with another(s) surnames and/or family names.  \n",
+    "<br>\n",
+    "For this purpose, I transform the names to their Spanish and English phonetic notation using the [International Phonetic Alphabet (IPA)](https://en.wikipedia.org/wiki/International_Phonetic_Alphabet).  \n",
+    "<br>  \n",
+    "After this step, I look for ryhmes in English and Spanish of:\n",
+    "- the last vowel,\n",
+    "- last two vowels,  \n",
+    "- the last syllable, and \n",
+    "- the initial letters for each name\n",
+    "\n",
+    "...and get booleans for each comparison between two strings (names).\n",
+    "\n",
+    "From this point, I get three scores for the comparison between two names: Spanish, English and Total, asigning more weight to the comparisons of the last two vowels and the last syllable. For example:\n",
+    "\n",
+    "$$\n",
+    "Score\\ Spanish = \\frac{\\sum{(last\\_1\\_vowel_{spanish},\\ 2 \\times last\\_2\\_vowels_{spanish},\\ 2 \\times last\\_syllable_{spanish},\\ initial\\_letters_{spanish})}}{6}\n",
+    "$$\n",
+    "\n",
+    "for more details, look at the `check_two_names` customed function from the `Names_rhyme` class.\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "Finally, I also get three scores (Spanish, English and Total) for a complete name. To get each of these scores, the `check_complete_name` function of the `Names_rhyme` class, compare each string of the name with the others. For example, in the name 'ana maria smith' this function gets the score for the comparison between (1) _ana_ and _maria_, (2) _ana_ and _smith_, and (3) _maria_ with _smith_."
    ]
   },
   {
@@ -28781,7 +28809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Class with customized functions to get scores of rhyme's names"
+    "### Class with customized functions to get scores of rhymes of names"
    ]
   },
   {
@@ -28946,6 +28974,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Examples of this class and functions use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -29068,6 +29103,17 @@
    "metadata": {},
    "source": [
     "### Getting scores for all names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Latin America we usually have two last names: the first last name corresponds to the first last name of the dad, and the first last name of the mom.\n",
+    "\n",
+    "In this section I am looking for the _scores_ of all surenames from the USA, Canada and Spain databases, combined with the my first family name (`Cuspinera`) and the first family name of my wife (`Martinez`).\n",
+    "\n",
+    "After getting the scores, I order the names by the _spanish score_, followed by the _total score_ and the complete _name_."
    ]
   },
   {
@@ -29502,6 +29548,15 @@
    "metadata": {},
    "source": [
     "### Getting scores for compound names with `elisa`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As I mentioned before, we have seven favorite names for our baby girl. Among these names, our favourite is `Elisa`.\n",
+    "\n",
+    "So, in this section, I made compound names using all single first names from the USA, Canada and Spain databases, combining them with `Elisa`, and the family names `Cuspinera` and `Martinez`."
    ]
   },
   {
@@ -30150,6 +30205,13 @@
     "df_elisa[(df_elisa['Score Spanish'] >= 0.1667) &\n",
     "         (df_elisa['Score English'] >= 0.4167) &\n",
     "         (df_elisa['Score Total'] >= 0.2917)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From these results, I look for the first names that combined with `Elisa` have at least the same scores as `Elisa Macarena` (two of our favorite names for our daughter):"
    ]
   },
   {
