Update files, almost ready for publishing

--- a/src/merge_clean.ipynb
+++ b/src/merge_clean.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Merge and clean databases\n",
+    "The aim of this Jupyter Notebook is to gather the names from each database of names from Spain, USA and British Columbia (Cánada), merge and clean the dataabses.\n",
+    "\n",
     "## Libraries"
    ]
   },
