Making some corrections on the explanation

--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Analysis\n",
-    "In this Jupyter Notebook, initially we will wind an EDA of the different databases of names gathered from the [merge_clean.ipynb](https://github.com/vcuspinera/Baby_names/blob/main/src/merge_clean.ipynb) notebook from this repository, and perform an analysis using an index developd to measure how well a surname name combines with another(s) surnames and/or family names by using the [International Phonetic Alphabet (IPA)](https://en.wikipedia.org/wiki/International_Phonetic_Alphabet). "
+    "In this Jupyter Notebook, initially we will wind an EDA of the different databases of names gathered from the [merge_clean.ipynb](https://github.com/vcuspinera/Baby_names/blob/main/src/merge_clean.ipynb) notebook from this repository, and perform an analysis using an index developd to measure how well a first name combines with a middle name and/or family names by using the [International Phonetic Alphabet (IPA)](https://en.wikipedia.org/wiki/International_Phonetic_Alphabet). "
    ]
   },
   {
@@ -28668,7 +28668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective of this section is to construct a tool to measure how well a surname name combines with another(s) surnames and/or family names.  \n",
+    "The objective of this section is to construct a tool that measures how well a first name combines with a middle name and/or family names.  \n",
     "<br>\n",
     "For this purpose, I transform the names to their Spanish and English phonetic notation using the [IPA](https://en.wikipedia.org/wiki/International_Phonetic_Alphabet).  \n",
     "<br>  \n",
@@ -28690,7 +28690,7 @@
     "<br>\n",
     "<br>\n",
     "\n",
-    "Finally, I also get three scores (Spanish, English and Total) for a complete name. To get each of these scores, the `check_complete_name` function of the `Names_rhyme` class, compare each string of the name with the others. For example, in the name 'ana maria smith' this function gets the score for the comparison between (1) _ana_ and _maria_, (2) _ana_ and _smith_, and (3) _maria_ with _smith_."
+    "Finally, I also get three scores (Spanish, English and Total) for a complete name. To get each of these scores, the `check_complete_name` function of the `Names_rhyme` class, compare each string of the name with the others. For example, in the name 'maria victoria smith' this function gets the score for the comparison between (1) _maria_ with _victoria_, (2) _maria_ and _smith_, and (3) _victoria_ with _smith_."
    ]
   },
   {
